Why create a new classloader each time?